# Analise_qualidade_vinhos

./: .gitignore  Dockerfile  README.md  README_STREAMLIT.md  app.py  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  run_app.bat  run_app.sh  setup.cfg
.github/scripts/: verify_import.py
.github/workflows/: ci.yml
Portfolio-DA-vinhos-jackwine/: Winequality.ipynb
Portfolio-DA-vinhos-jackwine/models_storage/: catboost_model.pkl  extra_trees_model.pkl  gradient_boosting_model.pkl  gradient_boosting_scaler.pkl  lightgbm_model.pkl  linear_regression_model.pkl  logistic_regression_model.pkl  random_forest_model.pkl  svm_classifier_model.pkl  svm_classifier_scaler.pkl  tree_classifier_model.pkl  tree_classifier_scaler.pkl  xgboost_model.pkl
Portfolio-DA-vinhos-jackwine/notebooks/: exploracao_dos_dados.ipynb  modelos_ml.ipynb  tratamento_dos_dados.ipynb
Portfolio-DA-vinhos-jackwine/src/: config.py
data/processed/: arquivos_exploratorio.csv  modelo_ml.csv  new_exploratory_sample.csv  novo_modelo_1_ml.csv  novo_modelo_ml.csv  (+1 more)
models_storage/: catboost_model.pkl  extra_trees_model.pkl  gradient_boosting_model.pkl  gradient_boosting_scaler.pkl  lightgbm_model.pkl  lightgbm_scaler.pkl  linear_regression_model.pkl  logistic_regression_model.pkl  random_forest_model.pkl  svm_classifier_model.pkl  tree_classifier_model.pkl  tree_classifier_scaler.pkl  xgboost_model.pkl  xgboost_scaler.pkl
notebooks/: exploracao_dos_dados.ipynb  model_builder_simulation.ipynb  modelos_ml.ipynb  production.ipynb  tratamento_dos_dados.ipynb
reports/: stakeholders.md
tests/: conftest.py  test_feature_engineering.py  test_training_pipeline.py
(+73 files in other folders)
