[project]
name = "analise-qualidade-vinhos"
version = "0.1.0"
description = "Projeto de análise de qualidade de vinhos com base nos materiais utilizados"
authors = [
    {name = "JacksonvBarbosa",email = "jacksonsventura@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<=3.13"
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "scikit-learn>=1.3,<1.6",
    "imbalanced-learn>=0.11,<0.15",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<0.14",
    "fastapi>=0.112,<1.0",
    "uvicorn>=0.30,<0.32",
    "pydantic>=2.6,<3.0",
    "joblib>=1.3,<2.0",
    "pyyaml>=6.0,<7.0"
]

[tool.poetry]
packages = [
    { include = "analise_qualidade_vinhos", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
